# pi0servo

./: .gitignore  Codes.md  GEMINI-ja.md  GEMINI.md  Plan-strcmd-to-json.md  Plan.md  Plan01.md  Plan02.md  Plan03.md  Plan04.md  Plan05.md  Plan06.md  Plan07.md  README.md  Tasks.md  ToDo.md  archive_file.py  cmds.toml  mise.toml  package-lock.json  pyproject.toml  pyrightconfig.json
.serena/: project.yml
.serena/memories/: code_style.md  code_style_conventions.md  codebase_structure.md  development_commands.md  development_guidelines.md  project_purpose.md  suggested_commands.md  task_completion_steps.md  task_completion_workflow.md  tech_stack.md
archives/: 20250909-0548-Tasks-done.md  20250909-0610-Tasks-done.md  20250909-0625-Tasks-done.md  20250909-0633-Tasks-done.md  20250909-0643-Tasks-done.md  20250913-1706-Tasks-done.md  20250913-1916-Tasks-done.md  20250913-2336-ToDo-done.md  20250914-1639-Tasks-done.md  20250927-185016-Tasks-done.md  20250927-185602-Tasks-done.md  20250927-201012-Tasks-done.md  20250927-201024-ToDo-done.md  20250928-024818-Tasks-done.md  20250929-022316-Tasks-done.md  20250929-022748-Tasks-done.md  20250929-040953-Tasks-done.md  20250929-041001-ToDo-done.md  20250930-121312-ToDo-done.md  20251002-011857-Tasks-done.md  20251002-012814-Tasks-done.md  20251002-181410-ToDo-done.md  20251004-051820-Tasks-done.md  20251004-052831-Tasks-done.md  20251004-053510-Tasks-done.md  20251004-053854-Tasks-done.md  20251004-054156-ToDo-done.md  20251007-081547-Tasks-done.md  20251007-082232-Plan-done.md  20251007-083030-Tasks-done.md  20251007-083706-Tasks-done.md  20251007-084317-Tasks-done.md  20251007-085643-Tasks-done.md  20251007-090307-Tasks-done.md  20251007-091955-Tasks-done.md  20251007-101048-Tasks-done.md  20251007-145835-Tasks-done.md  20251007-150145-Tasks-done.md  20251007-152614-ToDo-done.md  20251007-162955-Tasks-done.md  (+19 more)
docs/: Classes.md  Codes.md  JSONCMD_SAMPLES.md  JSONRPC-Errors.md  PyPI.md  ToDo.md  cmd_to_json.md  conf.py  json_cmds.json  setup-pigpiod.md
samples/: fastapi-test.py  sample-01-threadworker.py  sample-02-threadworker-strcmd.py  sample-03-threadmultiservo.py  sample-04-onekey-cli.py  sample-06-onekey-cli.py  sample-10-clibase.py  sample-11-apiclient.py  sample-11-cliwithhistory.py  sample-11-scriptrunnder.py  sample-12-onekeycli.py  sample-13-scriptrunner.py  sample-22-strclient.py  sample-api.script  sample-jsonclient.py  sample-jsoncmd.txt  sample-jsonrpc1.py  sample-simple-jsonclient.py  sample-simple-strclient.py  sample-str.script  sample-strcli.py  sample-strclient.py  sample-strcmd.txt  sample-threadmultiservo.py  sample-threadworker-strcmd.py  sample-threadworker.py  validate-jsonrpc.py
src/pi0servo/: __init__.py  __main__.py
src/pi0servo/base/: base_component.py
src/pi0servo/command/: calib.py  cmd_apicli.py  cmd_apiclient.py  cmd_apiserver.py  cmd_calib.py  cmd_jsoncli.py  cmd_jsonrpccli.py  cmd_servo.py  cmd_strcli.py  cmd_strclient.py  cmd_strjsonrpccli.py  jsoncli.py  servo.py  strcli.py
src/pi0servo/core/: calibrable_servo.py  multi_servo.py  piservo.py
src/pi0servo/drivers/: pigpio_client.py
src/pi0servo/enums/: angle_alias.py  command_type.py  set_target.py
src/pi0servo/helper/: cmd_parser.py  cmdlib.py  commonlib.py  json_cmds.json  jsonrpc_worker.py  str_cmd_to_json.md  str_cmd_to_json.py  thread_multi_servo.py  thread_worker.py
src/pi0servo/interfaces/: i_command_executor.py  i_servo_controller.py
src/pi0servo/utils/: Macro.md  clibase.py  cliwithhistory.py  error_codes.py  mylogger.py  onekeycli.py  scriptrunner.py  servo_config_manager.py
src/pi0servo/web/: api_client.py  json_api.py
tests/: _pigpio_mock.py  _testbase_cli.py  conftest.py  conftest_01_basic.py  conftest_02_interactive.py  mock_api_server.py  test_00_conftest_01_basic.py  test_00_conftest_02_interactive.py  test_01_piservo.py  test_02_servo_config_manager.py  test_03_calibrable_servo.py  test_04_multi_servo.py  test_05_thread_multi_servo.py  test_05_threadworker.py  test_06_cmd_parser.py  test_06_str_cmd_to_json.py  test_07_threadworker.py  test_07_threadworker_send_recv.py  test_08_cmdlib.py  test_08_commonlib.py  test_11_cli_servo.py  test_12_cli_calib.py  test_13_cli_api_client.py  test_14_cli_str_client.py  test_15_cli_api_server.py  test_16_cli_api_cli.py  test_17_cli_str_cli.py  test_51_samples.py  test_52_samples_interactive.py
