[project]
name = "pi0servo"
dynamic = ["version"]
description = "Python library for servo motor control."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
urls = { "Homepage" = "https://github.com/ytani01/pi0servo" }
keywords = ["pi0servo", "pigpio", "raspberry pi", "servo motor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
requires-python = ">=3.11"
dependencies = [
    "pigpio",
    "click",
    "blessed",
    "requests",
    "fastapi",
    "uvicorn",
    "types-toml>=0.10.8.20240310",
    "pyclickutils",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
pi0servo = "pi0servo.__main__:cli"

[tool.ruff]
line-length = 78
target-version = "py311"
lint.select = ["E", "F", "I"]
exclude = ["tests/data"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = "tests"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-mock",
    "ruff>=0.12.3",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
    "pyright>=1.1.403",
    "hatch",
]
samples = [
]

[[tool.mypy.overrides]]
module = ['pigpio', 'fastapi', 'requests']
ignore_missing_imports = true

[tool.uv.sources]
pyclickutils = { path = "../pyclickutils" }

[tool.hatch.publish.pypi]
