[project]
name = "pi0servo"
dynamic = ["version"]
description = "Python library for servo motor control."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
urls = { "Homepage" = "https://github.com/ytani01/pi0servo" }
keywords = ["pi0servo", "pigpio", "raspberry pi", "servo motor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
requires-python = ">=3.11"
dependencies = [
    "pigpio",
    "click",
    "blessed",
    "requests",
    "fastapi",
    "uvicorn",
    "json-rpc",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
pi0servo = "pi0servo.__main__:cli"

[tool.ruff]
line-length = 78
target-version = "py311"

[tool.ruff.lint]
# E(pycodestyle Error), W(pycodestyle Warning), F(Pyflakes), I(isort),
# C90(mccabe complexity), B(flake8-bugbear), A(flake8-builtins),
# UP(pyupgrade), PT(flake8-pytest-style), SIM(flake8-simplify),
# S(flake8-bandit)
select = ["E", "F", "I", "W", "C90", "B", "A", "UP", "PT", "SIM", "S"]
ignore = ["SIM108", "S104", "C901", "B008"]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    "tests/data",
]

[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["F401", "F811"]
"tests/*" = ["S101", "S603", "S307"] # assertの使用を許可
"docs/conf.py" = ["A001"]
"samples/*" = ["S108"]
"src/pi0servo/command/*" = ["S108"]

[tool.ruff.format]
docstring-code-line-length = 78

[tool.pytest.ini_options]
pythonpath = "tests"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-mock",
    "ruff>=0.12.3",
    "hatch",
    "twine>=6.2.0",
]
samples = [
    "jsonschema>=4.25.1",
    "types-jsonschema>=4.25.1.20250822",
]

[[tool.mypy.overrides]]
module = ['pigpio', 'fastapi', 'requests', 'jsonrpc', 'click']
ignore_missing_imports = true
